--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,6 +1,6 @@
 <ScrollView>
     
-  <GridLayout rows="auto,auto,auto,auto,auto,auto,*" columns="" class="mutedBg" >
+  <GridLayout rows="auto,auto,auto,auto,auto,auto,*" columns="" class="mutedBg"  >
       <GridLayout   [height]="boxSize*4/5" row="0" class="whiteBg" style=" border-radius: 20%;">
         <Image  src="http://pluspng.com/img-png/clothes-png-hd-t-shirt-png-transparent-images-2390886-893.png"></Image>
         
@@ -27,7 +27,7 @@
       </GridLayout>
       <Label text="Harry Potter gryffindor gewaad" class="primaryColor fontw500 font18" [marginRight]="pageSide/2" [marginLeft]="pageSide/2" [marginTop]="pageSide/6" [marginBottom]="pageSide/6" row="2"  ></Label>
       <Label row="3" [marginRight]="pageSide/2" [marginLeft]="pageSide/2"
-      text="dlk jf asd asd klf jdi ojfk ldfk lsd fjsd kla jfo d j f k jdkfj lsd kjfk a jdfkldj fkjdkls j klf jdi ojfk ldfk lsd fjsd kla jfo d j f k jdkfj lsd kjfk a jdfkldj fkjdkls j asd klf jdi ojfk ldfk lsd fjsd kla jfo d j f k jdkfj lsd kjfk a jdfkldj fkjdkls jfklsd jfijdljlk djfkdj  fjsk ldjf kld sjf oisdj fksdj f kdsjfl asdjfos djofj sdkl kdf jlasd kjfkljsdklj dkfjslkfjaskldf"
+      text="lsd fjsd kla jfo d j f k jdkfj lsd kjfk a jdfkldj fkjdkls j asd klf jdi ojfk ldfk lsd fjsd kla jfo d j f k jdkfj lsd kjfk a jdfkldj fkjdkls jfklsd jfijdljlk djfkdj  fjsk ldjf kld sjf oisdj fksdj f kdsjfl asdjfos djofj sdkl kdf jlasd kjfkljsdklj dkfjslkfjaskldf"
       textWrap="true" ></Label>
       <GridLayout  [marginLeft]="pageSide/2" [marginTop]="pageSide/2"  row="4" rows="*,*,*" columns="*,*,*,*,*,*,*">
         <Label text="Size" col="0"   ></Label>
@@ -46,7 +46,7 @@
            
       </GridLayout>
       <GridLayout [marginBottom]="pageSide/2" [marginTop]="pageSide/2" [marginRight]="pageSide/2" [marginLeft]="pageSide/2" row="6" rows="" columns="*,*">
-        <Label [paddingLeft]="pageSide" [paddingTop]="pageSide/2"  [width]="pageSide*4" [height]="pageSide*3/2"   class="btnbox fontw500" col="0" text="Add to Cart" ></Label>
+        <Label [paddingLeft]="pageSide" [paddingTop]="pageSide/2" (tap)="checkOut()" [width]="pageSide*4" [height]="pageSide*3/2"   class="btnbox fontw500" col="0" text="Add to Cart" ></Label>
         <Label col="1"   [paddingLeft]="pageSide" [paddingTop]="pageSide/2" [width]="pageSide*4" [height]="pageSide*3/2"  class="btnbox fontw500" text="Buy Now" ></Label>
         
       </GridLayout>  
